--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,3 @@
-src/main/webapp/resources/js/angular.min.js linguist-vendored
-src/main/webapp/resources/js/bootstrap.min.js linguist-vendored
-src/main/webapp/resources/js/bootstrap-notify.min.js linguist-vendored
-src/main/webapp/resources/js/jquery-3.1.1.min.js linguist-vendored
+angular.min.js linguist-vendored=false
+bootstrap*.min.js linguist-vendored=false
+jquery*.min.js linguist-vendored=false
