--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-angular.min.js linguist-vendored=false
-bootstrap*.min.js linguist-vendored=false
-jquery*.min.js linguist-vendored=false
+angular.min.js linguist-vendored
+bootstrap*.min.js linguist-vendored
+jquery*.min.js linguist-vendored
