--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,2 @@
-angular.min.js linguist-vendored
-bootstrap*.min.js linguist-vendored
-jquery*.min.js linguist-vendored
+* linguist-vendored
+*.java linguist-vendored=false
